dodalem w headzie, mete zeby na kazdym urzadzeniu byla strona wwyswietlana

--- a/stylecss/layout.css
+++ b/stylecss/layout.css
@@ -5,7 +5,10 @@ body {background-color: rgb(0, 255, 136);
 
 header{
     width: 1024px;
-height: 150px;
+    height: 150px;
+    background-color: aqua; 
+    color: black;
+    text-align: center;
 }
 nav, article, aside{
     height: 800px;
