--- a/stylecss/form.css
+++ b/stylecss/form.css
@@ -1,5 +1,5 @@
 em{
-    color: red;
+    color: rgb(254, 254, 254);
     font-weight: bold;
 }
 fieldset{
@@ -12,7 +12,7 @@ fieldset{
 
 legend{
     font-size: 22px;
-    color: darkmagenta;
+    color: rgb(0, 0, 0);
     text-shadow: 2px 3px 1px blue;
     text-decoration: underline;
 }
@@ -21,11 +21,11 @@ label{
     display: inline-block;
     font-size: 18px;
     padding: 5px;
-    background-color: orangered;
-    border-bottom: 1px solid blueviolet;
+    background-color: rgb(255, 255, 255);
+    border-bottom: 1px solid rgb(0, 0, 0);
 }
 input[type] :focus {
-    background-color: coral;
+    background-color: rgb(0, 4, 255);
     font-size: 18px;
 }
 input[type="reset"], input[type="submit"]{
@@ -33,7 +33,7 @@ input[type="reset"], input[type="submit"]{
     padding: 15px;
     font-family: 'Courier New', Courier, monospace;
     font-weight: bold;
-    background-color: bisque;
+    background-color: rgb(25, 0, 251);
     border: 5px dotted violet;
     border-radius: 20px;
 }
