--- a/stylecss/form.css
+++ b/stylecss/form.css
@@ -1,11 +1,11 @@
 em{
-    color: rgb(254, 254, 254);
+    color: rgb(255, 255, 255);
     font-weight: bold;
 }
 fieldset{
     width: 400px;
     margin: 15px auto;
-    border: 3px double black;
+    border: 5px double black;
     padding: 15px;
     border-radius: 20px;
 }
@@ -13,7 +13,6 @@ fieldset{
 legend{
     font-size: 22px;
     color: rgb(0, 0, 0);
-    text-shadow: 2px 3px 1px blue;
     text-decoration: underline;
 }
 label{
@@ -25,7 +24,7 @@ label{
     border-bottom: 1px solid rgb(0, 0, 0);
 }
 input[type] :focus {
-    background-color: rgb(0, 4, 255);
+    background-color: rgb(17, 0, 255);
     font-size: 18px;
 }
 input[type="reset"], input[type="submit"]{
@@ -34,7 +33,7 @@ input[type="reset"], input[type="submit"]{
     font-family: 'Courier New', Courier, monospace;
     font-weight: bold;
     background-color: rgb(25, 0, 251);
-    border: 5px dotted violet;
+    border: 5px dotted rgb(0, 0, 0);
     border-radius: 20px;
 }
 input[type="reset"]:hover{
