canvas feature added, bouncing ball (odbijające się jądro)

--- a/stylecss/layout.css
+++ b/stylecss/layout.css
@@ -64,3 +64,8 @@ body> footer, body>nav, body>article{
   align-items: center;
   height: 100vh; /* Adjust the height as needed */
 }
+
+canvas{
+    background-color: wheat;
+    border: 5px solid red;
+}
