--- a/stylecss/form.css
+++ b/stylecss/form.css
@@ -5,7 +5,7 @@ em{
 fieldset{
     width: 400px;
     margin: 15px auto;
-    border: 5px groove black;
+    border: 5px inset black;
     padding: 15px;
     border-radius: 5px;
 }
@@ -33,7 +33,7 @@ input[type="reset"], input[type="submit"]{
     font-family: 'Courier New', Courier, monospace;
     font-weight: bold;
     background-color: rgb(25, 0, 251);
-    border: 5px dotted rgb(0, 0, 0);
+    border: 3px inset rgb(0, 0, 0);
     border-radius: 20px;
 }
 input[type="reset"]:hover{
