--- a/stylecss/layout.css
+++ b/stylecss/layout.css
@@ -1,4 +1,5 @@
-body {background-color: rgb(0, 21, 255); 
+body {
+    background-color: rgb(158, 167, 70); 
     margin: auto;
     width: 1024px;
 }
@@ -10,24 +11,18 @@ header{
     color: black;
     text-align: center;
 }
-nav, article, aside{
-    height: 800px;
-    border: 5px solid rgb(0, 0, 0);
-}
+
 nav{
     width: 200px;
-    float: left;
     background-color: rgb(255, 255, 255);
 }
-article{
-    width: 600px;
-    float: left;
-    overflow: auto;
+.article{
+    width: 100%;
     background: radial-gradient(circle, rgb(255, 255, 255) 22%, rgb(38, 0, 255) 75%);
+    border: 7px dashed red;
 }
-aside{
-    width: 224px;
-    float: left;
+.aside{
+    width: 100%;
     background-color: rgb(255, 255, 255);
 } 
 *{
@@ -36,13 +31,12 @@ aside{
 body>footer{
     border: 5px dotted rgb(255, 255, 255);
     height: 200px;
-    clear: both;
 }
 
 iframe{
     width: 100%;
     height: 100%;
-    border: none;
+    border: 5px solid black;
 }
 
 body> footer, body>nav, body>article{
@@ -60,9 +54,9 @@ body> footer, body>nav, body>article{
 
 #outer_prezka{
     display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh; /* Adjust the height as needed */
+    justify-content: center;
+    align-items: center;
+    height: 100vh; /* Adjust the height as needed */
 }
 
 canvas{
