--- a/stylecss/rwd.css
+++ b/stylecss/rwd.css
@@ -4,7 +4,7 @@ body {
   
   .topnav {
     overflow: hidden;
-    background-color: #333;
+    background-color: #111ba1;
     position: relative;
   }
   
@@ -13,7 +13,7 @@ body {
   }
   
   .topnav a {
-    color: white;
+    color: rgb(255, 255, 255);
     padding: 14px 16px;
     text-decoration: none;
     font-size: 17px;
@@ -34,6 +34,6 @@ body {
   }
   
   .active {
-    background-color: #04AA6D;
+    background-color: #111ba1;
     color: white;
   }
