poprawiona widocznosc menu, usuniecie strony glownej z rozwijanego menu, dodany link do strony glownej na kliknieciu

--- a/stylecss/layout.css
+++ b/stylecss/layout.css
@@ -66,3 +66,10 @@ canvas{
     background-color: wheat;
     border: 5px solid red;
 }
+
+.odd{
+    background-color: yellowgreen;
+}
+.even{
+    background-color: red;
+}
