--- a/stylecss/rwd.css
+++ b/stylecss/rwd.css
@@ -6,6 +6,7 @@ body {
     overflow: hidden;
     background-color: #111ba1;
     position: relative;
+    z-index: 2;
   }
   
   .topnav #myLinks {
